--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@uniswap/smart-order-router",
+  "name": "@bombswap/smart-order-router",
   "version": "3.11.2",
   "description": "Uniswap Smart Order Router",
   "main": "build/main/index.js",
@@ -7,7 +7,7 @@
   "module": "build/module/index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Uniswap/smart-order-router.git"
+    "url": "https://github.com/bombswap/smart-order-router.git"
   },
   "license": "GPL",
   "keywords": [],
@@ -17,7 +17,7 @@
     "compile-router": "npx typechain --target ethers-v5 --out-dir src/types/other './node_modules/@uniswap/swap-router-contracts/artifacts/contracts/**/*.json'",
     "compile-narwhal": "npx typechain --target ethers-v5 --out-dir src/types/other './node_modules/@uniswap/narwhal/artifacts/contracts/**/*.json'",
     "compile-external-types": "npx typechain --target ethers-v5 --out-dir src/types/other 'src/abis/**/*.json'",
-    "build": "run-p compile-v3-types compile-v2-types compile-router compile-narwhal compile-external-types && run-p build:*",
+    "build": "run-p compile-v3-types compile-v2-types compile-router compile-external-types && run-p build:*",
     "build:main": "tsc -p tsconfig.json",
     "build:module": "tsc -p tsconfig.module.json",
     "fix": "run-s fix:*",
@@ -67,7 +67,7 @@
     "@types/jest": "^27.0.0",
     "@types/jest-sinon": "^1.0.2",
     "@types/lodash": "^4.14.168",
-    "@types/node": "^15.0.2",
+    "@types/node": "^18.16.3",
     "@types/sinon": "^10.0.2",
     "@types/stats-lite": "^2.2.0",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
