--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bombswap/smart-order-router",
-  "version": "3.12.1",
-  "description": "Uniswap Smart Order Router",
+  "version": "3.13.0",
+  "description": "Bombswap V3 Smart Order Router",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
   "module": "build/module/index.js",
@@ -31,14 +31,14 @@
     "node": ">=10"
   },
   "dependencies": {
+    "@bombswap/router-sdk": "^1.4.0",
+    "@bombswap/universal-router-sdk": "^2.0.0",
+    "@bombswap/v2-sdk": "^1.0.1",
     "@uniswap/default-token-list": "^2.0.0",
     "@uniswap/permit2-sdk": "^1.2.0",
-    "@uniswap/router-sdk": "^1.3.0",
     "@uniswap/swap-router-contracts": "^1.3.0",
     "@uniswap/token-lists": "^1.0.0-beta.25",
     "@uniswap/universal-router": "^1.0.1",
-    "@uniswap/universal-router-sdk": "^1.3.9",
-    "@uniswap/v2-sdk": "^3.0.1",
     "@uniswap/v3-sdk": "^3.7.0",
     "async-retry": "^1.3.1",
     "await-timeout": "^1.1.1",
